# procon30-kyogi

./: README.md
solver/: .gitignore  CMakeLists.txt  README.md
solver/include/: agent.hpp  beam_searcher.hpp  color.hpp  field.hpp  search_type.hpp  single_beam_searcher.hpp  single_state.hpp  state.hpp  types.hpp
solver/include/util/: action_unpack.hpp  next_actions.hpp  single_action_unpack.hpp  single_next_actions.hpp  state_visualize.hpp  union_find.hpp
solver/src/: agent.cpp  field.cpp  main.cpp
